package objets and configuration/unpackaged/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Ellen Process New</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contact Built</fullName>
        </values>
        <values>
            <fullName>New Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Offer Received</fullName>
        </values>
        <values>
            <fullName>Outreach</fullName>
        </values>
        <values>
            <fullName>Pitched</fullName>
        </values>
        <values>
            <fullName>Spam</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <description>“Ellen Community”</description>
        <label>Brand Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Consumer Package Goods</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>QSR/Fast Food</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                    <label>Food &amp; Beverage</label>
                </value>
                <value>
                    <fullName>Games</fullName>
                    <label>Games,Toys</label>
                </value>
                <value>
                    <fullName>Health and Wellness</fullName>
                    <label>Health &amp; Wellness</label>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Mobile Phones</fullName>
                </value>
                <value>
                    <fullName>Packaged Foods</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                    <label>Restaurants,QSR,Fast Food</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                    <label>Retail,Apparel,Grocery</label>
                </value>
                <value>
                    <fullName>Technology / Electronics</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Events and Ticket Brokers</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>“Ellen Community”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Name / Product</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>“Ellen Community”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Budget</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Marketing_Campaign__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Details of Marketing Campaign</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Important_things_about_Brand__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Important things about Brand</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_KPIs__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Main KPIs</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Message_To_Ellen_Team__c</fullName>
        <description>“Ellen Community”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message To Ellen Team</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_elements__c</fullName>
        <description>Ellen Community</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Priority elements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timing_of_Integration__c</fullName>
        <description>“Ellen Community”</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Timing of Integration</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_do_you_want_to_learn_about__c</fullName>
        <description>“Ellen Community”</description>
        <label>What do you want to learn about?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On air</fullName>
                </value>
                <value>
                    <fullName>Branded Digital content</fullName>
                </value>
                <value>
                    <fullName>Mobile Games</fullName>
                </value>
                <value>
                    <fullName>Digital media</fullName>
                </value>
                <value>
                    <fullName>Subscription box</fullName>
                </value>
                <value>
                    <fullName>Podcast</fullName>
                </value>
                <value>
                    <fullName>Ellen’s Influencers</fullName>
                </value>
                <value>
                    <fullName>Trade Out and Social</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                    <isActive>false</isActive>
                    <label>App</label>
                </value>
                <value>
                    <fullName>Branded content</fullName>
                    <isActive>false</isActive>
                    <label>Branded content</label>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                    <isActive>false</isActive>
                    <label>Social Media</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_3_Key_Messages__c</fullName>
        <description>“Ellen Community”</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>In consumer language, what are the 3 most important points to communicate in this integration?   PLEASE NOTE: Number of key messages included in integration will be determined by mutually agreed contract terms.</inlineHelpText>
        <label>2-3 Key Messages</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>Ellen_Community</fullName>
        <active>true</active>
        <businessProcess>Ellen Process New</businessProcess>
        <label>Ellen Community</label>
    </recordTypes>
</CustomObject>